--- a/sass/main.scss
+++ b/sass/main.scss
@@ -86,6 +86,8 @@ html {
     display: flex;
     justify-content: center;
     position: relative;
+    height: 100vh;
+    overflow: hidden;
 }
 
 .home-bg {
@@ -97,20 +99,24 @@ html {
     // width: 110rem
     display: flex;
     justify-content: center;
-    margin-top: 4rem;
+    //margin-top: 4rem;
     background-color: #fdca40;
     // clip-path: polygon(90% 9%, 66% 79%, 23% 61%, 12% 16%);
-    clip-path: polygon(92% 8%, 69% 82%, 27% 67%, 10% 14%);
+    //clip-path: polygon(94% 6%, 68% 80%, 31% 73%, 10% 9%);
+    clip-path: polygon(92% 9%, 69% 82%, 27% 70%, 10% 13%);
     min-height: 90rem;
     position: relative;
     align-self: center;
     width: 100%;
-    height: 80rem;
+    //height: 80rem;
+    margin-top: 14rem;
+    height: 100vh;
+    overflow: hidden;
 }
 
 .process-bg {
     @extend .home-bg;
-    clip-path: polygon(82% 12%, 77% 56%, 24% 56%, 17% 11%);
+    clip-path: polygon(82% 10%, 77% 56%, 24% 56%, 17% 9%);
 }
 
 .header {
@@ -137,6 +143,7 @@ html {
     font-weight: normal;
     color: $black;
     font-size: 1.6rem;
+    line-height: 1.4;
     text-align: center;
     margin: 1rem 0;
 }
@@ -327,6 +334,7 @@ html {
 
 .project-desc-text {
     font-size: 1.6rem;
+    line-height: 1.4;
 
     a {
         text-decoration: underline;
@@ -602,6 +610,7 @@ html {
     .header-container {
         margin-top: 8rem;
         justify-content: flex-start;
+        overflow: visible;
     }
 
     .home-bg, .process-bg {
